--- a/_posts/2017-11-19-Testing.md
+++ b/_posts/2017-11-19-Testing.md
@@ -3,7 +3,7 @@ layout: post
 title: 'Testing'
 date: 2017-11-19 22:08:45
 file: /audio/Testing.m4a
-shownotes: <p>This is a test. <p/><p>Contact:  <a href="https://twitter.com/LK64076007A">LK64076007A</a> on Twitter.</p>
+shownotes: '<p>This is a test. <p/><p>Contact:  <a href="https://twitter.com/LK64076007A">LK64076007A</a> on Twitter.</p>'
 summary: This is a test. 
 duration: "0:12" #audio length in min
 length: "101" #filesize in bytes
