--- a/_posts/2018-11-23-Episode5.md
+++ b/_posts/2018-11-23-Episode5.md
@@ -3,7 +3,7 @@ layout: post
 title: 'Episode5'
 date: 2018-11-23 08:44:13
 file: /audio/Episode5.m4a
-shownotes: <p>Show notes<p/><p>Contact:  <a href="https://twitter.com/LK64076007A">LK64076007A</a> on Twitter.</p>
+shownotes: shownotes
 summary: Summary
 duration: "0:08" #audio length in min
 length: "75" #filesize in bytes
